[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypi-workspace-test"
version = "1.0.0"
dependencies = [
    "requests>=2.28.0",
    "vulnerable-root-package>=1.0.0",
    "missing-root-lib>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "phantom-root-dev-tool>=1.0.0"
]

[tool.poetry]
name = "pypi-workspace-test"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
vulnerable-root-package = "^1.0.0"
missing-root-lib = "^2.1.0"
# Path dependencies that will trigger workspace detection
core-package = { path = "./packages/core" }
utils-package = { path = "./packages/utils" }
scripts-package = { path = "./tools/scripts" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
phantom-root-dev-tool = "^1.0.0"
automation-tools = { path = "./tools/automation" }
