[project]
name = "automation-tools"
version = "1.0.0"
dependencies = [
    "celery>=5.0.0",
    "vulnerable-automation-package>=1.3.0",
    "missing-automation-lib>=2.8.0",
    "phantom-workflow-engine>=4.0.0"
]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.0.0"
vulnerable-automation-package = "^1.3.0"
missing-automation-lib = "^2.8.0"
phantom-workflow-engine = "^4.0.0"
# Path dependencies to missing directories
missing-automation-core = { path = "../missing-automation-core" }
phantom-scheduler = { path = "../../missing-scheduler" }
